--- a/exercises/09-upside-down-tetris/css/style.css
+++ b/exercises/09-upside-down-tetris/css/style.css
@@ -44,8 +44,6 @@ body {
 
 .purple {
     background-color: rgb(130, 33, 130);
-    border: 15px outset darkorchid
+    border: 15px outset darkorchid;
 
 }
-
-
