--- a/projects/05-product-showcase-site/css/style.css
+++ b/projects/05-product-showcase-site/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
     box-sizing: border-box;
 }
@@ -7,17 +9,23 @@ body {
     font-family: sans-serif;
 }
 
-.content {
+.content-1,
+.content-2,
+.content-3 {
     max-width: 500px;
     margin-left: auto;
     margin-right: auto;
     color: black;
     background-color: #f6f4f4;
+    padding-bottom: 40px;
+}
+
+.content-2 {
+    background-color: white;
 }
 
 .background-color {
     background-color: black;
-    margin: 40px 20px;
 }
 
 img {
@@ -26,7 +34,9 @@ img {
 
 h3 {
     text-align: center;
+    font-family: "Roboto", sans-serif;
 }
+
 .text-overlay {
     position: absolute;
     top: 10%;
@@ -49,9 +59,17 @@ p {
     padding: 10px 20px;
     border: 1px solid ;
     border-radius: 5px;
-    left: ;
 }
 
 .button.shop {
     padding: 10px 45px;
+}
+
+.button.shop.bags {
+    margin-left: 158px;
+}
+
+.button.shop-man {
+    padding: 10px 45px;
+    margin-left: 58px;
 }
