--- a/exercises/16-site-scaffolding/css/style.css
+++ b/exercises/16-site-scaffolding/css/style.css
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Host+Grotesk:ital,wght@0,300..800;1,300..800&display=swap');
+
 * {
     box-sizing: border-box;
 }
@@ -12,6 +15,7 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #d4c3a8;
+    font-family: "Host Grotesk", sans-serif;
 }
 
 #navbar #logo-container {
