--- a/exercises/17-blog-with-sidebar/css/style.css
+++ b/exercises/17-blog-with-sidebar/css/style.css
@@ -40,7 +40,7 @@ img {
 
 .sidebar-content h2 {
     background-color: #417870;
-    color: black;
+    color: white;
     padding: 10px 50px;
     margin: 0px;
     font-size: 20px;
