--- a/personal/code-skeleton/css/style.css
+++ b/personal/code-skeleton/css/style.css
@@ -3,36 +3,7 @@
 }
 
 body {
-    max-width: 1200px;
-    margin: auto;
-    padding: 20px;
+    margin: 0px;
     font-family: sans-serif;
-    font-size: 1rem;
-    /* font-size: 16px; */
 }
 
-@media (max-width: 768px) {
-    .container {
-        flex-direction: column;
-    }
-}
-
-#header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
-    border-bottom: 1px solid black;
-}
-
-.product-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    gap: 20px;
-    padding: 15px;
-}
-
-.product img {
-    width: 100%;
-    height: auto;
-}
