--- a/personal/personal-website/css/style.css
+++ b/personal/personal-website/css/style.css
@@ -37,15 +37,15 @@ body {
 .product-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-    gap: 20px;
-    padding: 15px;
     margin-top: 60px;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
 }
 
 .product {
-    border: 1px solid black;
+    border-top: 1px solid #ddd;
+    border-left: 1px solid #ddd;
     padding: 40px 0px;
-    margin: 20px 0px;
     text-align: center;
     background: #ffffff;
 }
