--- a/personal/personal-website/css/style.css
+++ b/personal/personal-website/css/style.css
@@ -36,7 +36,7 @@ body {
 
 .product-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     margin-top: 60px;
     border-right: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
@@ -52,7 +52,7 @@ body {
 
 .product img {
     width: 100%;
-    height: 550px;
+    height: auto;
     object-fit: cover;
     display: block;
 }
