--- a/personal/personal-website/css/style.css
+++ b/personal/personal-website/css/style.css
@@ -1,19 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Major+Mono+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&display=swap');
+
 * {
     box-sizing: border-box;
 }
 
 body {
-    max-width: 1200px;
-    margin: auto;
+    margin: 0px;
     font-family: sans-serif;
     font-size: 1rem;
     /* font-size: 16px; */
 }
 
-@media (max-width: 768px) {
+@media (min-width: 600px) {
     .product-grid {
-        flex-direction: column;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     }
+}
+
+@media (min-width: 1024px) {
+  .product-grid {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  }
 }
 
 #header {
@@ -22,6 +30,10 @@ body {
     align-items: center;
     padding: 15px;
     border-bottom: 1px solid black;
+}
+
+#header h2 {
+    font-family: "Major Mono Display", monospace;
 }
 
 .button {
@@ -36,10 +48,12 @@ body {
 
 .product-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     margin-top: 60px;
     border-right: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .product {
@@ -58,3 +72,6 @@ body {
     display: block;
 }
 
+.product h3 {
+    font-family: "Atkinson Hyperlegible Mono", sans-serif;
+}
