--- a/projects/07-final-eval/css/style.css
+++ b/projects/07-final-eval/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Inline&display=swap');
+
 * {
     box-sizing: border-box;
 }
@@ -48,4 +50,8 @@ body {
 
 #single-column-layout .buttons {
     margin: 36px;
+}
+
+#single-column-layout h1 {
+    font-family: "Bungee Inline", sans-serif;
 }
