--- a/projects/07-final-eval/css/style.css
+++ b/projects/07-final-eval/css/style.css
@@ -13,7 +13,7 @@ body {
     max-width: 500px;
     margin-left: auto;
     margin-right: auto;
-    background-color: rgb(255, 255, 255);
+    background-color: #ffffff;
     text-align: center;
     padding: 20px;
 
@@ -55,3 +55,4 @@ body {
 #single-column-layout h1 {
     font-family: "Bungee Inline", sans-serif;
 }
+
