--- a/demos/26-masonry-galleries/css/style.css
+++ b/demos/26-masonry-galleries/css/style.css
@@ -9,7 +9,7 @@ body {
 
 #layout {
     /* fiddle with this to modify a 
-    horizontal mansory callery */
+    horizontal mansory allery */
     max-width: 800px;
     margin: 48px auto;
     text-align: center;
