--- a/exercises/20-responsive-dejavu/css/style.css
+++ b/exercises/20-responsive-dejavu/css/style.css
@@ -66,5 +66,6 @@ body {
     #nav {
         flex-direction: column;
         align-items: center;
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     }
 }
