--- a/exercises/20-responsive-dejavu/css/style.css
+++ b/exercises/20-responsive-dejavu/css/style.css
@@ -60,6 +60,7 @@ body {
     flex: 1;
     object-fit: cover;
     aspect-ratio: 1 / 1;
+    width: 100%;
 }
 
 @media screen and (max-width: 440px) {
