--- a/personal/personal-website/css/style.css
+++ b/personal/personal-website/css/style.css
@@ -29,9 +29,8 @@ body {
     font-size: 18px;
 }
 .button i {
-    margin-right: 1em;
-    margin-left: 1em;
-    font-size: 1.5rem;
+    margin-right: 1vw;
+    margin-left: 1vw;
 }
 
 .product-grid {
@@ -54,7 +53,7 @@ body {
 }
 
 .product i {
-    font-size: 1em;
+    margin-left: 75%;
 }
 
 .product img {
