--- a/personal/code-skeleton/css/style.css
+++ b/personal/code-skeleton/css/style.css
@@ -10,6 +10,7 @@
 body {
     margin: 0px;
     font-family: sans-serif;
+    font-size: 1rem;
 }
 
 #header {
@@ -17,7 +18,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 15px 20px;
+    padding: 15px 10px;
     border-bottom: 1px solid black;
 }
 
@@ -125,14 +126,21 @@ body {
 }
 
 .search-box {
-    display: inline-flex; 
+    display: flex; 
     align-items: center;
-    gap: 10px;                 
+    gap: 10px;   
+    position: relative;              
 }
 
 .search-box i {
     font-size: 18px;
     color: black;
+}
+
+.close-search {
+    position: absolute;
+    right: 10px;
+
 }
 
 /* Hide hamburger and mobile menu on desktop */
