--- a/personal/code-skeleton/css/style.css
+++ b/personal/code-skeleton/css/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Major+Mono+Display&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&display=swap');
 
 * {
     box-sizing: border-box;
@@ -8,41 +7,43 @@
 }
 
 body {
-    margin: 0px;
     font-family: sans-serif;
     font-size: 1rem;
 }
 
 #header {
-    position: relative;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     padding: 15px 10px;
     border-bottom: 1px solid black;
 }
 
 .logo {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
     font-family: "Major Mono Display", monospace;
-    flex: 0 0 auto;
+    text-align: center;
 }
 
 .nav-left,
 .nav-right {
   flex: 1;
+  display: flex;
   align-items: center;
 }
 
 .nav-left {
     justify-content: flex-start;
+    flex-wrap: nowrap;
+}
+
+.nav-left .search {
+    display: inline-block;
+    margin-right: 100%;
+    margin-left: 15px;
 }
 
 .nav-right {
   justify-content: flex-end;
-  display: flex;
 }
 
 .nav-left i,
@@ -62,7 +63,7 @@ body {
     height: 100%;
     background: white;
     color: black;
-    display: inline-block;
+    display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
@@ -70,10 +71,6 @@ body {
     transform: translateY(-100%);
     transition: transform 0.3s ease;
     z-index: 1000;
-}
-
-.search {
-    display: inline-block;
 }
 
 .mobile-menu ul {
@@ -103,11 +100,6 @@ body {
 /* When menu is active */
 .mobile-menu.show {
   transform: translateY(0);
-}
-
-/* Hide desktop menu by default (mobile view) */
-.desktop-menu {
-  display: none;
 }
 
 .search-section {
@@ -140,26 +132,18 @@ body {
 .close-search {
     position: absolute;
     right: 10px;
+}
 
+.front-page img {
+    object-fit: cover;
+    width: 100%;
 }
 
 /* Hide hamburger and mobile menu on desktop */
 @media (min-width: 972px) {
-  .menu-toggle {
-    display: none;
-  }
 
   #header {
-    justify-content: center;
-  }
-
-  .logo {
-    position: static;
-    transform: none;
-  }
-
-  .search {
-    display: none;
+    justify-content: space-between;
   }
 
   /* Desktop nav (inline) */
@@ -213,9 +197,22 @@ body {
         display: none; /* hide header search icon */
     }
 
+    .nav-left {
+        display: flex;
+        align-items: center;
+    }
+
     .search-icon-desktop {
         display: inline-block;
         font-size: 18px;
         color: black;
+    }
+
+    .front-page img {
+        display: block;
+        width: 60%;
+        object-fit: cover;
+        margin: 0px auto;
+        max-width: 600px;
     }
 }
