--- a/personal/code-skeleton/css/style.css
+++ b/personal/code-skeleton/css/style.css
@@ -19,6 +19,11 @@ body {
     border-bottom: 1px solid black;
 }
 
+.homepage-button {
+  color: black;
+  text-decoration: none;
+}
+
 .logo {
     font-family: "Major Mono Display", monospace;
     text-align: center;
@@ -108,6 +113,10 @@ body {
     border-bottom: 1px solid black;
 }
 
+.search-section.active {
+  display: block;
+}
+
 .search-section input {
     width: 100%;
     outline: none;
@@ -187,10 +196,7 @@ body {
   .close-menu {
     display: none; /* No X on desktop */
   }
-
-  .search-section {
-    display: block; /* show automatically on desktop */
-  }
+  
 
   .search {
     display: none; /* hide header search icon */
