--- a/personal/atelier-personnage/css/style.css
+++ b/personal/atelier-personnage/css/style.css
@@ -19,6 +19,11 @@ body {
     justify-content: space-between;
     padding: 15px 10px;
     border-bottom: 1px solid black;
+    position: sticky; 
+    top: 0;           
+    z-index: 100;     
+    background: white; 
+    transition: all 0.3s ease;
 }
 
 .homepage-button {
@@ -119,6 +124,10 @@ body {
     width: 100%;
     padding: 16px;
     border-bottom: 1px solid black;
+    position: sticky;
+    top: 63px;
+    z-index: 999;
+    background-color: white;
 }
 
 .search-section.active {
@@ -130,7 +139,8 @@ body {
     outline: none;
     background: transparent;
     border: none;
-    font-size: 16px;
+    font-size: 1rem;
+    font-family: "Jost", sans-serif;
 }
 
 .search-box {
