--- a/personal/atelier-personnage/partials/header.html
+++ b/personal/atelier-personnage/partials/header.html
@@ -1,31 +1,56 @@
 <header id="header">
-			<div class="nav-left">
-				<a href="#" class="hamburger"><i class="fa-solid fa-bars"></i></a>
+  <div class="nav-left">
+    <a href="#" class="hamburger">
+      <i class="fa-solid fa-bars"></i>
+    </a>
 
-				<!-- Fullscreen mobile menu -->
-				<nav class="mobile-menu">
-					<a href="#" class="close-menu"><i class="fas fa-times"></i></a>
-					<ul>
-						<li><a href="#">WOMAN</a></li>
-						<li><a href="#">MAN</a></li>
-						<li><a href="#">COLLECTIONS</a></li>
-						<li><a href="#">CONTACT</a></li>
-					</ul>
-				</nav>
+    <!-- Fullscreen mobile menu -->
+    <nav class="mobile-menu">
+      <a href="#" class="close-menu">
+        <i class="fas fa-times"></i>
+      </a>
+      <ul>
+		    <li><a href="shop.html">SHOP</a></li>
+        <li><a href="#">WOMAN</a></li>
+        <li><a href="#">MAN</a></li>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">CONTACT</a></li>
+      </ul>
+    </nav>
 
-				<a href="#" class="search"><i class="fa-solid fa-magnifying-glass"></i></a>
-			</div>
+    <a href="#" class="search">
+      <i class="fa-solid fa-magnifying-glass"></i>
+    </a>
+  </div>
 
-			<a href="index.html" class="homepage-button">
-				<h2 class="logo">
-					atelier<br />
-					personnage
-				</h2>
-			</a>
+  <a href="index.html" class="homepage-button">
+    <h2 class="logo">
+      atelier<br />
+      personnage
+    </h2>
+  </a>
 
-			<div class="nav-right">
-				<a href="#" class="second-search"><i class="fa-solid fa-magnifying-glass"></i></a>
-				<a href="#" class="button"><i class="fa-regular fa-bookmark"></i></a>
-				<a href="#" class="button"><i class="fa-solid fa-bag-shopping"></i></a>
-			</div>
-		</header>
+  <div class="nav-right">
+    <a href="#" class="second-search">
+      <i class="fa-solid fa-magnifying-glass"></i>
+    </a>
+    <a href="#" class="button">
+      <i class="fa-regular fa-bookmark"></i>
+    </a>
+    <a href="#" class="button">
+      <i class="fa-solid fa-bag-shopping"></i>
+    </a>
+  </div>
+</header>
+
+<div class="search-section">
+  <div class="search-box">
+    <a href="#" class="search-icon-desktop">
+      <i class="fa-solid fa-magnifying-glass"></i>
+    </a>
+    <input type="text" placeholder="WHAT ARE YOU LOOKING FOR ?" />
+    <a href="#" class="close-search">
+      <i class="fas fa-times"></i>
+    </a>
+  </div>
+</div>
