--- a/personal/atelier-personnage/partials/header.html
+++ b/personal/atelier-personnage/partials/header.html
@@ -34,7 +34,7 @@
     <a href="#" class="second-search">
       <i class="fa-solid fa-magnifying-glass"></i>
     </a>
-    <a href="#" class="button">
+    <a href="saved.html" class="button">
       <i class="fa-regular fa-bookmark"></i>
     </a>
     <a href="#" class="button">
