--- a/personal/atelier-personnage/css/style.css
+++ b/personal/atelier-personnage/css/style.css
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Major+Mono+Display&display=swap'); */
+
 @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
 
@@ -9,8 +9,12 @@
 }
 
 body {
-    font-family: sans-serif;
+    font-family: "Jost", sans-serif;
     font-size: 1rem;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Bodoni Moda SC", serif;
 }
 
 #header {
@@ -34,7 +38,6 @@ body {
 }
 
 .logo {
-    font-family: "Bodoni Moda SC", serif;
     text-align: center;
     line-height: 0.7;
 }
