--- a/personal/atelier-personnage/css/style.css
+++ b/personal/atelier-personnage/css/style.css
@@ -169,13 +169,75 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .front-page {
+    position: relative;
     margin-top: 60px;
 }
 
-.front-page img {
+.front-page .hero-video {
     object-fit: cover;
     width: 100%;
-    border-bottom: 1px solid black;
+}
+
+.video-text {
+    position: absolute;
+    bottom: 40px;
+    left: 50%;
+    text-align: center;
+    transform: translate(-50%, -50%);
+}
+
+.video-text a {
+    display: inline-block;
+    color: white;
+    text-decoration: none;
+    border: 1px solid white;
+    padding: 0.5vw 4vw;
+    transition: all 0.3s ease;
+    font-size: 2vh;
+}
+
+.video-text a:hover {
+    background-color: #ffffffa9;
+    color: black;
+    transition: all 0.3s ease;
+}
+
+.image-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    margin: 40px 40px;
+    gap: 40px;
+}
+
+.grid-item {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+}
+
+.grid-item img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  object-fit: cover;
+}
+
+.grid-item a {
+    position: absolute;
+    bottom: 40px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-decoration: none;
+    color: white;
+    border: 1px solid white;
+    padding: 0.5vw 4vw;
+    font-size: 2vh;
+}
+
+.grid-item:hover a:hover {
+    background-color: #ffffffa9;
+    color: black;
+    transition: all 0.3s ease;
 }
 
 /* Hide hamburger and mobile menu on desktop */
@@ -252,5 +314,9 @@ h1, h2, h3, h4, h5, h6 {
         object-fit: cover;
         margin: 0px auto;
         max-width: 600px;
+    }
+
+    .image-grid {
+    grid-template-columns: repeat(2, 1fr);
     }
 }
