--- a/personal/atelier-personnage/css/shop.css
+++ b/personal/atelier-personnage/css/shop.css
@@ -58,6 +58,15 @@
     border: none;
     padding: 6px;
     cursor: pointer;
+
+    opacity: 0;
+    pointer-events: none; /* Prevent clicks when hidden */
+    transition: opacity 0.3s ease;
+}
+
+.product-item:hover .arrow {
+    opacity: 1;
+    pointer-events: auto;
 }
 
 .arrow.left {
