--- a/personal/atelier-personnage/css/shop.css
+++ b/personal/atelier-personnage/css/shop.css
@@ -16,7 +16,7 @@
 
 .product-item {
     text-align: center;
-    padding: 20px 20px 40px;
+    padding: 0 0 40px;
     background: #fff;
     border-top: 1px solid #ddd;
     border-left: 1px solid #ddd;
@@ -24,11 +24,12 @@
 }
 
 .product-item .button {
-    display: flex;
-    justify-content: flex-end;
+    position: absolute;
+    right: 20px;
+    top: 20px;
     font-size: 18px;
     color: black;
-    margin-bottom: 10px;
+    z-index: 10;
 }
 
 /* --- IMAGE SLIDER --- */
@@ -40,6 +41,8 @@
 
 .image-slider img {
     width: 100%;
+    height: auto;
+    object-fit: cover;
     display: none;
     transition: opacity 0.4s ease;
 }
