--- a/personal/atelier-personnage/partials/header.html
+++ b/personal/atelier-personnage/partials/header.html
@@ -34,9 +34,10 @@
     <a href="#" class="second-search">
       <i class="fa-solid fa-magnifying-glass"></i>
     </a>
-    <a href="saved.html" class="button">
-      <i class="fa-regular fa-bookmark"></i>
-    </a>
+    <a href="saved.html" class="button bookmark-btn">
+  <i class="fa-regular fa-bookmark"></i>
+  <span class="bookmark-dot"></span>
+</a>
     <a href="#" class="button">
       <i class="fa-solid fa-bag-shopping"></i>
     </a>
