--- a/personal/atelier-personnage/css/style.css
+++ b/personal/atelier-personnage/css/style.css
@@ -250,8 +250,16 @@ h1, h2, h3, h4, h5, h6 {
     background: #ececec;
 }
 
+.hidden{
+    display: none;
+}
+
 /* Desktop view */
 @media (min-width: 972px) {
+    .hidden{
+    display: flex;
+}
+    
     #header {
         justify-content: space-between;
     }
