--- a/personal/atelier-personnage/partials/footer.html
+++ b/personal/atelier-personnage/partials/footer.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="css/footer.css" />
+
 <footer id="footer">
-    <p>© 2025 Atelier Personnage. All rights reserved.</p>
+    <p>© 2025 Atelier Personnage.</p>
 </footer>
