--- a/personal/atelier-personnage/css/shop.css
+++ b/personal/atelier-personnage/css/shop.css
@@ -16,11 +16,12 @@
 
 .product-item {
     text-align: center;
-    padding: 0px 0px 40px;
+    padding: 0px 0px 60px;
     background: #fff;
     border-top: 1px solid #ddd;
     border-left: 1px solid #ddd;
     position: relative;
+    font-size: 12px;
 }
 
 .product-item .button {
