--- a/personal/atelier-personnage/css/saved.css
+++ b/personal/atelier-personnage/css/saved.css
@@ -48,14 +48,14 @@
 
 .saved-info h4 {
   margin: 0 0 6px;
-  font-size: 1.1rem;
+  font-size: 1rem;
   color: black;
   font-weight: 700;
   letter-spacing: 0.5px;
 }
 
 .saved-info p {
-  margin: 0 0 15px;
+  margin-top: -8px;
   color: black;
   font-size: 1rem;
 }
@@ -73,7 +73,7 @@
   border: 1px solid #000;
   background: none;
   color: black;
-  padding: 6px 10px;
+  padding: 8px 10px;
   margin: 30px 0;
   max-width: 250px;
   cursor: pointer;
